# teeth

./: README.md  example.ipynb  main.ipynb  pyproject.toml
Dental OPG XRAY Dataset/Original_Data/: 178.txt
