[project]
name = "teeth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.0",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]
